<resources>
    <string name="app_name">HAYAH</string>
    <string name="choice_screen_login">SignIn</string>
    <string name="choice_screen_register">SignUp</string>
    <string name="choice_screen_donator">Donator</string>
    <string name="choice_screen_patient">Patient</string>

    <string name="sign_up_name">Full Name</string>
    <string name="sign_up_age">Age</string>
    <string name="show_address">Address</string>
    <string name="sign_up_mobile">Mobile</string>
    <string name="blood_type">Blood Type</string>
    <string name="Email">Email / Mobile </string>
    <string name="register_Email">Email (Optional)</string>
    <string name="password">Password</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="no_result">there is no one yet</string>
    <string name="select_country">Select Country</string>
    <string name="select_city">Select City</string>
    <string name="select_state">Select State</string>
    <string name="sign_in_email">Email</string>
    <string name="profile_available">Available for blood donation</string>
    <string name="profile_update">Update</string>

    <string name="check_internet">please, check Internet Connection</string>

    <string name="name_error">Enter name</string>
    <string name="age_error_limit">Age must be >= 18 </string>
    <string name="age_error">Enter age </string>
    <string name="country_error">Select country</string>
    <string name="state_error">Select state</string>
    <string name="city_error">Select city</string>
    <string name="phone_error">Enter valid mobile</string>
    <string name="email_error">Enter valid email</string>
    <string name="password_error">password must be 8 characters</string>
    <string name="blood_type_error">Select your blood type</string>

    <string name="general_error">Error, try again with valid data</string>
    <string name="thanks">Thanks, for signUp @ Hayah</string>
    <string name="updated">You are updated your information @ Hayah</string>
    <string name="invalid_email_password">invalid email / Mobile or password</string>
    <string name="loading">Loading . . .</string>
    <string name="all_blood_type">All Blood Type</string>
    <string name="search">search</string>

    <string name="call">Call</string>
    <string name="no_result_state">No States Yet</string>
    <string name="no_result_city">No Cities Yet</string>
    <string name="sign_up_address">Address (optional)</string>

    <string name="copy_right">© 2018 HAYAH 1.0 </string>

</resources>

