<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="locale"
    android:textDirection="locale"

    >
    <LinearLayout
        android:layoutDirection="locale"
        android:textDirection="locale"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <com.google.android.gms.ads.AdView

            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"
            android:layout_gravity="center"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView_donator_profile_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-2223962490254338/4498230285">
        </com.google.android.gms.ads.AdView>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/sign_up_name"
            android:layout_height="wrap_content">

        <EditText
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:layoutDirection="locale"
            android:textDirection="locale"
            android:id="@+id/edit_profile_name"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:hint="@string/sign_up_age"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:maxLength="2"
            android:inputType="number"
            android:layoutDirection="locale"
            android:textDirection="locale"
            android:id="@+id/edit_profile_age"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:hint="@string/blood_type"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="18sp"
            android:layoutDirection="locale"
            android:textDirection="locale"
            android:id="@+id/edit_profile_blood_type"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:hint="@string/Email"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:layoutDirection="locale"
            android:textDirection="locale"
            android:id="@+id/edit_profile_email"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>




        <LinearLayout

            android:layout_marginTop="6dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textDirection="locale"
            android:layoutDirection="locale"
            android:id="@+id/linear_profile_address_1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout

                android:layout_margin="6dp"
                android:background="@drawable/spinner_background"
                android:orientation="vertical"
                android:focusableInTouchMode="false"
                android:layout_weight="1"
                android:layoutDirection="locale"
                android:textDirection="locale"
                android:id="@+id/spinner_profile_country"
                android:layout_width="match_parent"
                android:layout_height="50dp" >

                <TextView
                    android:id="@+id/text_profile_country_name"
                    android:gravity="center"
                    android:text="@string/country"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="6dp"

                android:background="@drawable/spinner_background"
                android:orientation="vertical"
                android:focusableInTouchMode="false"
                android:layout_weight="1"
                android:layoutDirection="locale"
                android:textDirection="locale"
                android:id="@+id/spinner_profile_state"
                android:layout_width="match_parent"
                android:layout_height="50dp" >

                <TextView
                    android:id="@+id/text_profile_state_name"
                    android:gravity="center"
                    android:text="@string/state"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>


            <LinearLayout
                android:layout_margin="6dp"

                android:background="@drawable/spinner_background"
                android:orientation="vertical"
                android:focusableInTouchMode="false"
                android:layout_weight="1"
                android:layoutDirection="locale"
                android:textDirection="locale"
                android:id="@+id/spinner_profile_city"
                android:layout_width="match_parent"
                android:layout_height="50dp" >

                <TextView

                    android:id="@+id/text_profile_city_name"
                    android:gravity="center"
                    android:text="@string/city"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>



        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <android.support.design.widget.TextInputLayout
                android:hint="@string/sign_up_mobile"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:inputType="number"
                android:layout_weight=".5"
                android:layoutDirection="locale"
                android:textDirection="locale"
                android:id="@+id/edit_profile_mobile"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Switch
            android:layout_marginTop="7dp"
            android:id="@+id/switch_profile_available"
            android:text="@string/profile_available"
            android:padding="26dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <ProgressBar
            android:layoutDirection="locale"
            android:textDirection="locale"
            android:id="@+id/progress_profile_update"
            android:visibility="invisible"
            android:padding="5dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button

            android:layout_marginBottom="15dp"
            android:layoutDirection="locale"
            android:textDirection="locale"
            android:background="@drawable/button_background"
            android:padding="5dp"
            android:id="@+id/button_profile_update"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/profile_update"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />





    </LinearLayout>
</ScrollView>